add API SEND SMS After Register Successfuly and payment success
